--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,3 +2,4 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {}
 }
+"ghcr.io/nikiforovall/devcontainer-features/dotnet-csharpier:1": {}
